--- a/NutriMentor/Templates/index.html
+++ b/NutriMentor/Templates/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="css/dataTables.bootstrap5.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>NutriMentor</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/dataTables.bootstrap5.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+    <title>{% block title %}NutriMentor{% endblock %}</title>
   </head>
   <body>
     <!-- top navigation bar -->
@@ -161,13 +161,14 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <h4>Dashboard</h4>
+            <h4>{% block dashboard_title %}Dashboard{% endblock %}</h4>
           </div>
         </div>
         <div class="row">
+          {% for card in cards %}
           <div class="col-md-3 mb-3">
-            <div class="card bg-primary text-white h-100">
-              <div class="card-body py-5">Primeiro Suplemento</div>
+            <div class="card {{ card.color }} text-white h-100">
+              <div class="card-body py-5">{{ card.title }}</div>
               <div class="card-footer d-flex">
                 Visualizar detalhes
                 <span class="ms-auto">
@@ -176,71 +177,30 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 mb-3">
-            <div class="card bg-warning text-dark h-100">
-              <div class="card-body py-5">Segundo Suplemento</div>
-              <div class="card-footer d-flex">
-                Visualizar detalhes
-                <span class="ms-auto">
-                  <i class="bi bi-chevron-right"></i>
-                </span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 mb-3">
-            <div class="card bg-success text-white h-100">
-              <div class="card-body py-5">Terceiro Suplemento</div>
-              <div class="card-footer d-flex">
-                Visualizar detalhes
-                <span class="ms-auto">
-                  <i class="bi bi-chevron-right"></i>
-                </span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 mb-3">
-            <div class="card bg-danger text-white h-100">
-              <div class="card-body py-5">Quarto suplemento</div>
-              <div class="card-footer d-flex">
-                Visualizar detalhes
-                <span class="ms-auto">
-                  <i class="bi bi-chevron-right"></i>
-                </span>
-              </div>
-            </div>
-          </div>
+          {% endfor %}
         </div>
         <div class="row">
+          {% for chart in charts %}
           <div class="col-md-6 mb-3">
             <div class="card h-100">
               <div class="card-header">
                 <span class="me-2"><i class="bi bi-bar-chart-fill"></i></span>
-                Consumo suplemento 1
+                {{ chart.title }}
               </div>
               <div class="card-body">
                 <canvas class="chart" width="400" height="200"></canvas>
               </div>
             </div>
           </div>
-          <div class="col-md-6 mb-3">
-            <div class="card h-100">
-              <div class="card-header">
-                <span class="me-2"><i class="bi bi-bar-chart-fill"></i></span>
-                Consumo suplemento 2
-              </div>
-              <div class="card-body">
-                <canvas class="chart" width="400" height="200"></canvas>
-              </div>
-            </div>
-          </div>
+          {% endfor %}
         </div>
-       
+      </div>
     </main>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
-    <script src="./js/jquery-3.5.1.js"></script>
-    <script src="./js/jquery.dataTables.min.js"></script>
-    <script src="./js/dataTables.bootstrap5.min.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.5.1.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.dataTables.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/dataTables.bootstrap5.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   </body>
 </html>
