--- a/templates/root/Cadastro_User.html
+++ b/templates/root/Cadastro_User.html
@@ -44,7 +44,7 @@
                         <label for="confsenha">Confirmação de Senha</label>
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
-                        <a href="login.html" class="btn btn-link">Já tem uma conta? Faça login</a>
+                        <a href="/login" class="btn btn-link">Já tem uma conta? Faça login</a>
                         <button type="submit" class="btn btn-danger btn-lg">Criar Meu Cadastro!</button>
                     </div>
                 </form>
