--- a/templates/root/login.html
+++ b/templates/root/login.html
@@ -9,13 +9,13 @@
                 <h3 class="card-title mb-0">Login</h3>
             </div>
             <div class="card-body">
-                <form id="login-form">
+                <form method="post" class="mb-3" id="loginForm">
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="email" placeholder=" ">
+                        <input type="text" class="form-control" id="email" name="email" placeholder=" " required autofocus>
                         <label for="email">E-mail</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="senha" placeholder=" ">
+                        <input type="password" class="form-control" id="senha" name="senha" placeholder=" " required>
                         <label for="senha">Senha</label>
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
