--- a/templates/root/login.html
+++ b/templates/root/login.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <a href="/" class="btn btn-link">Não tem uma conta? Cadastre-se</a>
-                        <button type="submit" class="btn btn-primary btn-lg">Entrar</button>
+                        <a href="/Menu" class="btn btn-danger btn-lg">Entrar</a>
                     </div>
                 </form>
             </div>
