--- a/templates/root/Cadastro_User.html
+++ b/templates/root/Cadastro_User.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <a href="/login" class="btn btn-link">Já tem uma conta? Faça login</a>
-                        <button type="submit" class="btn btn-danger btn-lg">Criar Meu Cadastro!</button>
+                        <a href="/Menu" class="btn btn-danger btn-lg">Criar Meu Cadastro!</a>
                     </div>
                 </form>
             </div>
