--- a/templates/root/menu_Principal.html
+++ b/templates/root/menu_Principal.html
@@ -1,4 +1,8 @@
-    <!DOCTYPE html>
+
+{% block subtitulo %}Entrar{% endblock %}
+{% block conteudo %}
+
+   <!DOCTYPE html>
     <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
@@ -9,33 +13,8 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#">Dashboard de Suplementos</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/html/perfil.html">Exibir Perfil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/html/cadastro_suplemento.html">Cadastro Suplemento</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/html/registro_consumo.html">Registro Consumo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/html/sobre.html">Sobre</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/html/index_Cadastro_User.html">Sair</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
+
+        HEADER
 
         <div class="container content">
             <h1 class="mt-4">Dashboard de Suplementos Consumidos</h1>
@@ -86,14 +65,7 @@
             </div>
         </div>
 
-        <footer>
-            <div class="container">
-                <p>Eduardo Siqueira e Diego Ravani</p>
-                <p>Gerenciador de consumo suplementos®</p>
-                <p>Copyright © 2024</p>
-                <p>Todos os direitos reservados</p>
-            </div>
-        </footer>
+        foother
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
