--- a/templates/root/login.html
+++ b/templates/root/login.html
@@ -9,7 +9,7 @@
                 <h3 class="card-title mb-0">Login</h3>
             </div>
             <div class="card-body">
-                <form method="post" class="mb-3" id="loginForm">
+                <form method="post" class="mb-3" id="loginForm " action="/login">
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="email" name="email" placeholder=" " required autofocus>
                         <label for="email">E-mail</label>
