--- a/templates/baseCadastroLogin.html
+++ b/templates/baseCadastroLogin.html
@@ -25,6 +25,14 @@
         {% block content %}
         {% endblock %}
     </div>
+<footer>
+    <div class="container">
+        <p>Eduardo Siqueira e Diego Ravani</p>
+        <p>Gerenciador de consumo suplementos®</p>
+        <p>Copyright © 2024</p>
+        <p>Todos os direitos reservados</p>
+    </div>
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
